--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,14 +51,27 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
   assets:
-    - assets/fonts/
-    - assets/icons/
-    - assets/images/
+    - assets/images/bar.png
+    - assets/images/calories.png
+    - assets/images/water.png
+    - assets/images/meals.png
+    - assets/images/logo.png
+    - assets/icons/cup.png
+    - assets/icons/dish.png
+    - assets/icons/profile.png
+    - assets/icons/spoon.png
 
   fonts:
-    - family: DelaGothicOne
+    - family: Montserrat
       fonts:
-        - asset: assets/fonts/DelaGothicOne-Regular.ttf
+        - asset: assets/fonts/Montserrat-Black.ttf
+          weight: 900
+        - asset: assets/fonts/Montserrat-ExtraBold.ttf
+          weight: 800
+        - asset: assets/fonts/Montserrat-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Montserrat-Medium.ttf
+          weight: 500
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
