--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   pie_chart: ^5.4.0
   flutter_svg: ^2.0.10
   cupertino_icons: ^1.0.2
+  photo_view: ^0.15.0
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +63,17 @@ flutter:
     - assets/icons/spoon.png
     - assets/images/water_sticker.png
     - assets/images/load_screen.png
+    - assets/images/grechka.png
+    - assets/images/meals.png
+    - assets/images/pelmeni.png
+    - assets/images/borsch.png
+    - assets/images/democr.png  
+    - assets/images/most.png
+    - assets/images/breackfast.png
+    - assets/images/potatoes.png
+    - assets/images/plans/1_plan.png
+    - assets/images/plans/2_plan.png
+    - assets/images/plans/3_plan.png
 
   fonts:
     - family: Montserrat
